# FastApiTaskManagement

./: README.md  pyproject.toml
app/: database.db  main.py
app/configs/: database.py  settings.py
app/controllers/: task_controller.py
app/domains/dto/: dtos.py
app/domains/models/: task_model.py
app/models/: task.py
app/repositories/: task_repository.py
app/services/: task_service.py
postman/: Task.postman_collection.json
