[tool.poetry]
name = "fastapitaskmanagement"
version = "0.1.0"
description = ""
authors = ["Lucas Del Puerto Garcia <lucas.d.puerto@outlook.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.111.0"
uvicorn = "^0.30.1"
pydantic = "^2.7.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
